# role_scout

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
config/: donotapply.yaml  resume_summary_example.md  watchlist.yaml
docs/: API-SPEC.md  CODE-AUDIT_RESOLVED.md  DATA-MODEL.md  EXP-BRIEF.md  INGEST-FEATURE-PLAN.md  MCP-SCHEMAS.md  PHASE2-AGENTIC-PLAN.md  PRD-CORE.md  SPEC.md  TECH-DESIGN.md  TEST-PLAN.md  dashboard-revamp-plan.md  pipeline-diagram.md
scripts/: mcp_smoke.py
src/role_scout/: __init__.py  claude_client.py  config.py  cost.py  db.py  graph.py  logging_config.py  migrations.py  runner.py  shadow.py  tailor.py  ttl.py  watchlist_state.py
src/role_scout/compat/: __init__.py  logging.py  models.py  sources.py
src/role_scout/dal/: __init__.py  _yaml_io.py  donotapply_dal.py  jobs_dal.py  run_log_dal.py  tailor_dal.py  watchlist_dal.py
src/role_scout/dashboard/: __init__.py  routes.py
src/role_scout/eval/: __init__.py  alignment_eval.py  discovery_recall_eval.py  ground_truth.yaml  judge.py  (+4 more)
standards/: quality-bar.md
tests/: conftest.py
tests/e2e/: test_dashboard.py  test_tailor_route.py
tests/fixtures/: seed_fixture_db.py
tests/integration/: test_graph_d2.py  test_graph_full.py
tests/unit/: test_addendum_fixes.py  test_claude_failures.py  test_cost.py  test_coverage_boost.py  test_d1_scaffold.py  test_dal_edge_cases.py  test_dashboard_error_paths.py  test_dedup.py  test_discovery.py  test_discovery_donotapply.py  test_donotapply_dal.py  test_enrichment.py  test_eval.py  test_ingest_extractor.py  test_ingest_fetcher.py  test_mcp.py  test_observability.py  test_output_node.py  test_preflight.py  test_reflection.py  test_review_node.py  test_routes.py  test_scorer_kill_switch.py  test_scoring.py  test_source_health.py  test_tailor.py  test_ttl.py
(+59 files in other folders)
