[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "role-scout"
version = "2.0.0"
description = "Agentic job search pipeline — Phase 2"
requires-python = ">=3.11"
dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # MCP (pinned exact minor — smoke test required before upgrade)
    "mcp>=1.9.4",
    # LLM
    "anthropic>=0.40.0",
    # Data / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "scipy>=1.13.0",
    # Web
    "flask>=3.0.0",
    "flask-wtf>=1.2.0",
    # Observability
    "structlog>=24.1.0",
    # Utilities
    "pyyaml>=6.0",
    "tenacity>=8.3.0",
    # Phase 1 (frozen) — resolved via [tool.uv.sources] below
    "jobsearch",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]
eval = [
    "openai>=1.30.0",
]
tracing = [
    "langsmith>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.uv.sources]
jobsearch = { path = "../auto_jobsearch", editable = true }

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
